--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h2>Hello</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+     Exercitationem cupiditate laborum laudantium necessitatibus 
+     esse eaque atque numquam reiciendis ut veniam.</p>
 </body>
 </html>
